Fix economy database sync and offhand voucher removal
- Fixed `eco [set/give/remove]` commands not correctly updating player data in the database.
- Fixed voucher item not clearing when used from the offhand.
- General code optimizations.